# copernicus-downloader

./: .env.example  .gitignore  CHANGELOG.md  README.md  cds_config.s3.yaml  cds_config.yaml  dump.yaml  pyproject.toml  taskfile.yaml
copernicus_downloader/: config.py  incremental.py  main.py  storage.py
copernicus_downloader/post_processing/: normalize_cams_solar_radiation.py
scripts/: dump_source.py
